♻️ refactor: UpdateDialog display more content

--- a/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
@@ -16,7 +16,7 @@
 
                     <MainLayoutBottomNav Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutBottomNav>
 
-                    <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
+                    <UpdateDialog @bind-Visible="showUpdate" Value="lastRelease"></UpdateDialog>
                     <SponsorSupportSnackbar @bind-Visible="showSponsorSupport"></SponsorSupportSnackbar>
                 </ChildContent>
 
