--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -16,7 +16,7 @@
 
                     <MainLayoutBottomNav Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutBottomNav>
 
-                    <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
+                    <UpdateDialog @bind-Visible="showUpdate" Value="lastRelease"></UpdateDialog>
                     <PermissionSnackbar></PermissionSnackbar>
                     <SponsorSupportSnackbar @bind-Visible="showSponsorSupport"></SponsorSupportSnackbar>
                 </ChildContent>
