🆕 feat: Diary card automatic title

--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
@@ -75,10 +75,10 @@
     <MDivider Class="mx-4"></MDivider>
     <MListItem ThreeLine>
         <MListItemContent>
-            @if (!string.IsNullOrEmpty(Value.Title))
+            @if (!string.IsNullOrEmpty(title))
             {
                 <MListItemTitle Class="diary-card__title">
-                    @Value.Title
+                    @title
                 </MListItemTitle>
             }
 
