♻️ refactor(Screenshot): Migration from html2canvas to snapdom

--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -63,7 +63,7 @@
              class="@OutlineClass">
         </div>
 
-        <div class="@($"{screenshotClass} pb-6")">
+        <div class="@($"{screenshotClass} pb-6 screenshot")">
             <div class="d-flex align-center px-3 flex-wrap">
                 @if (diaryTimeFormat?.Contains("yyyy/MM/dd") ?? false)
                 {
